--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ph20Eoow/githubaction_tutorial
-          path: ./.github
+          path: ./.github/
       - name: Hello world action step
         uses: ./.github/actions/helloworld_actions # Uses an action in the root directory
         id: hello
