--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -9,6 +9,9 @@ jobs:
       # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          repository: ph20Eoow/githubaction_tutorial
+          path: ./.github/
       - name: Hello world action step
         uses: ./ # Uses an action in the root directory
         id: hello
