--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -11,9 +11,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ph20Eoow/private_action
-          path: ./.github/actions/tutorial
+          path: ./.github/
       - name: Hello world action step
-        uses: ./ # Uses an action in the root directory
+        uses: ./.github/actions/tutorial # Uses an action in the root directory
         id: hello
         with:
           who-to-greet: 'Mona the Octocat'
