--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -13,9 +13,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ph20Eoow/private_action
-          path: ./.github/
+          path: ./
       - name: Hello world action step
-        uses: ./.github/actions/tutorial # Uses an action in the root directory
+        uses: ./actions/tutorial # Uses an action in the root directory
         id: hello
         with:
           who-to-greet: 'Mona the Octocat'
