--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -17,8 +17,10 @@ jobs:
       - name: Hello world action step
         uses: ./actions/tutorial # Uses an action in the root directory
         id: hello
+        env:
+          SEMGREP_API_KEY: ${{ secret.SEMGREP_API_KEY }}
         with:
-          who-to-greet: 'Mona the Octocat'
+          who-to-greet: ${{ env.SEMGREP_API_KEY }}
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
