--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -17,10 +17,6 @@ jobs:
       - name: Hello world action step
         uses: ./actions/tutorial # Uses an action in the root directory
         id: hello
-        env:
-          SEMGREP_API_KEY: ${{ secrets.SEMGREP_API_KEY }}
-        with:
-          who-to-greet: 73119c81379ced4ba378ff38eea150c6fa920c234a49bde965b8ffb68d30e816
       # Use the output from the `hello` step
       - name: Get the output semgrep scan
-        run: echo "The time was ${{ steps.hello.outputs.result }}"
+        run: echo "The time was ${{ steps.hello.outputs.time }}"
