--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Hello world action step
         uses: ./actions/tutorial # Uses an action in the root directory
         id: hello
+        with:
+          semgrep-api-key: ${{ secrets.SEMGREP_API_KEY }}
       # Use the output from the `hello` step
       - name: Get the output semgrep scan
         run: echo "The time was ${{ steps.hello.outputs.time }}"
