--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -13,9 +13,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ph20Eoow/private_action
-          path: ./
+          path: ./actions/
       - name: Hello world action step
-        uses: ./actions/tutorial # Uses an action in the root directory
+        uses: ./actions/actions/tutorial # Uses an action in the root directory
         id: hello
         with:
           semgrep-api-key: ${{ secrets.SEMGREP_API_KEY }}
